# KeyLight

./: .gitignore  CMakeLists.txt  README.md  build  compile  count_lines.sh
.cache/clangd/index/: Binasc.cpp.8369B505B9C03D4D.idx  Binasc.h.9F90F4E38EECCF93.idx  Common.cpp.EEAEE8AFADF8BFC9.idx  Common.hpp.E9BC4896FB5AF8AF.idx  MidiEvent.cpp.6BA0120EBF879FA0.idx  MidiEvent.h.AAF6D1CE56C311C4.idx  MidiEventList.cpp.CE0F5015900628C1.idx  MidiEventList.h.34B5F5059EE321C8.idx  MidiFile.cpp.7E56F076C83DF8D9.idx  MidiFile.h.608FEA84E4F82791.idx  MidiMessage.cpp.FFDD2A4F725D2B7D.idx  MidiMessage.h.90B9AEBB890EF2C1.idx  MidiParser.cpp.39435D8A9A6B7E5F.idx  MidiParser.hpp.0003BA8FA9CF17A7.idx  Options.cpp.09140F5FB7791E7C.idx  Options.h.51D62DAFB56BFDEE.idx  Renderer.cpp.8CC13E83C3C8552A.idx  Renderer.hpp.B46B2AF487836B37.idx  RoundedRectangleShape.hpp.DB19A438FA83BE03.idx  SFMLWindow.cpp.09188BB5FEDA6080.idx  SFMLWindow.hpp.598076A8C16792C0.idx  VirtualPiano.hpp.677616B891E56A89.idx  Window.hpp.4BD9C20A43CBAF07.idx  main.cpp.3847620CD8D52910.idx
extra/: TestProject.klp  build SFML3 for MSYS2.txt  make  make_and_run
extra/music/: fall.mid  mozart_k545.mid
extra/res/midi/: bells.mid  chop_64_2_2.mid  merry.mid  merry2.mid  mio1.mid  mio2.mid  noct20.mid  rach.mid  rach2.mid  rach_left.mid  scale1.mid  scale2.mid  testMidiFile2.mid  testMidiFile3.mid  testMidiFile4.mid  testMidiFile5.mid
extra/shaders/: basic.vert  blur.frag  dualKawaseDown.frag  dualKawaseUp.frag  flip.frag  flip.vert  gaussianBlur.frag  gaussian_blur.frag  glow.frag  kawase_blur.frag  note.frag  note.vert  particle.frag  particle.vert  threshold.frag
extra/styles/: Default.json  DefaultStyle.json
extra/styles/particles/: Default.json  DefaultParticles.json
other/: Gettext.cmake  TODO.txt  appIcon.rc  background.xcf  build_dependencies.sh  build_linux_release.sh  build_windows_release.sh  code stuff  ffmpeg_info  gettext_stuff  licence_text.txt  manual_build.md  tgui_example.cpp
po/: KeyLight.pot  en.po  es.po  it.po
src/: BloomManager.cpp  BloomManager.hpp  Common.cpp  Common.hpp  ConfigManager.cpp  ConfigManager.hpp  Gui.cpp  Gui.hpp  JSONManager.cpp  JSONManager.hpp  Midi.cpp  Midi.hpp  MidiParser.cpp  MidiParser.hpp  Particles.cpp  Particles.hpp  Renderer.cpp  Renderer.hpp  RoundedRectangleShape.hpp  SFMLWindow.cpp  SFMLWindow.hpp  VPianoData.cpp  VPianoData.hpp  VPianoDataStructures.hpp  VPianoResources.cpp  VPianoResources.hpp  VideoRenderer.cpp  VideoRenderer.hpp  VirtualKeyboard.cpp  VirtualKeyboard.hpp  VirtualPiano.cpp  VirtualPiano.hpp  Window.cpp  Window.hpp  ffmpeg_helper.cpp  ffmpeg_helper.hpp  main.cpp
